--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 
+title: Armadhani Hiro Juni Permana
+# logo: /assets/img/headshot_circle.png
+description: A recent graduate in computer science with a strong passion for pursuing a career in software development, data science, data analysis, and machine learning. Possessing skills in artificial intelligence and machine learning using Python, developing and maintaining the components behind an application or website using Go Language and used to work in agile methodology using Trello and Notion with one year of experience in data as a developer and one year of experience in data science through various trainings and several group projects. I am still seeking experience in the computer science industry and aiming to enhance my computational skills. I am an ambitious and enthusiastic individual when it comes to education and problem-solving, with a background in mathematical logic, and always ready to face intellectual challenges. Proven organizational and analytical skills, capable of working well in teams or independently.
+show_downloads: true
+theme: jekyll-theme-minimal
