--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Armadhani Hiro Juni Permana
 # logo: /assets/img/headshot_circle.png
 #description: text below image
-# show_downloads: true
-theme: jekyll-theme-cayman
+show_downloads: true
+theme: jekyll-theme-minimal
